tests/regression/issue242/distinct_one.expected
File "tests/regression/issue242/distinct_one.smt2", line 3, character 8-20:
3 | (assert (distinct a))
            ^^^^^^^^^^^^
Error Bad arity for symbol 'distinct':
      expected at least 2 arguments but got 1
