tests/regression/issue242/distinct_one.smt2
(set-logic QF_BV)
(declare-const a Bool)
(assert (distinct a))
